add css header trang chủ

--- a/admin/sanpham.html
+++ b/admin/sanpham.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lý sản phẩm</title>
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="admin.css">
     <script src="https://kit.fontawesome.com/7d1c352b9d.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -22,8 +22,8 @@
             <nav>
                 <ul>
                     <li><a href="admin.html">TRANG CHỦ</a></li>
-                    <li><a href="#">DANH MỤC</a></li>
-                    <li><a href="#">SẢN PHẨM</a></li>
+                    <li><a href="danhmuc.html">DANH MỤC</a></li>
+                    <li><a href="sanpham.html">SẢN PHẨM</a></li>
                     <li><a href="#">QUẢN LÝ TÀI KHOẢN</a></li>
                     <li><a href="#">THỐNG KÊ</a></li>
                     <li><a href="#">THÙNG RÁC</a></li>
