Xong giao diện trang chủ

--- a/trangchu/trangchu.html
+++ b/trangchu/trangchu.html
@@ -303,9 +303,9 @@
             </div>
             <div class="column-footer">
                 <h1>Kết nối với chúng tôi</h1>
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook" style="color: #0c6;"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram" style="color: #0c6;"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter" style="color: #0c6;"></i></a>
             </div>
         </footer>
     </div>
