--- a/trangchu.html
+++ b/trangchu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Book - Sách sinh viên</title>
     <script src="https://kit.fontawesome.com/11c329332b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="trangchu.css">
+    <link rel="stylesheet" href="css/trangchu.css">
 </head>
 <body>
     <div class="wrapper">
