--- a/qltk.html
+++ b/qltk.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="qltk.css">
+    <link rel="stylesheet" href="css/qltk.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
